crates/cairn-core/tests/snapshots/assemble_hot_snapshots__assemble_hot_data_canonical_json.snap
---
source: crates/cairn-core/tests/assemble_hot_snapshots.rs
assertion_line: 53
expression: "snapshot_for_recipe(\"chat\")"
---
{
  "bytes": 56,
  "prefix": "purpose body\nindex body\npinned\nsalience\nplaybook\nsignal\n",
  "recipe": "chat",
  "segments": [
    {
      "byte_end": 13,
      "byte_start": 0,
      "content_hash": "0d7892bed0cb4198183b7726c2392e5df0b11443c80c3adeb13ef66cb840f714",
      "stability": "stable_1h",
      "step": "purpose"
    },
    {
      "byte_end": 24,
      "byte_start": 13,
      "content_hash": "9246b29fd2a6a5d1d8ec676857179ffc4b2c14a3bd0d885a1cb74c110b0ab183",
      "stability": "stable_1h",
      "step": "index"
    },
    {
      "byte_end": 31,
      "byte_start": 24,
      "content_hash": "dbdbfc4eea60c31dfdb68830dcf4393aa7e1fb5b64af6377e444c6c42e909203",
      "stability": "stable_5m",
      "step": "pinned_feedback"
    },
    {
      "byte_end": 40,
      "byte_start": 31,
      "content_hash": "24a0d4b2307993b802cd519301e9d868f10e48721f70c7e5613b0b0244e064df",
      "stability": "stable_5m",
      "step": "top_salience_project"
    },
    {
      "byte_end": 49,
      "byte_start": 40,
      "content_hash": "bed3054354c5074a5d26ff8b56179f0c45bd23e14a3876fb022160c57e71150a",
      "stability": "stable_5m",
      "step": "active_playbook"
    },
    {
      "byte_end": 56,
      "byte_start": 49,
      "content_hash": "3037f94da9d48d4abbbaa27bb97374852648877ee36e8ca7b4b2bcfe7a9c40f7",
      "stability": "volatile",
      "step": "recent_user_signal"
    }
  ]
}
