crates/cairn-core/tests/snapshots/assemble_hot_snapshots__assemble_hot_data_canonical_json_debug.snap
---
source: crates/cairn-core/tests/assemble_hot_snapshots.rs
expression: "snapshot_for_recipe(\"debug\")"
---
{
  "bytes": 36,
  "prefix": "purpose body\npinned\nsalience\nsignal\n",
  "recipe": "debug",
  "segments": [
    {
      "byte_end": 13,
      "byte_start": 0,
      "content_hash": "0d7892bed0cb4198183b7726c2392e5df0b11443c80c3adeb13ef66cb840f714",
      "stability": "stable_1h",
      "step": "purpose"
    },
    {
      "byte_end": 20,
      "byte_start": 13,
      "content_hash": "dbdbfc4eea60c31dfdb68830dcf4393aa7e1fb5b64af6377e444c6c42e909203",
      "stability": "stable_5m",
      "step": "pinned_feedback"
    },
    {
      "byte_end": 29,
      "byte_start": 20,
      "content_hash": "24a0d4b2307993b802cd519301e9d868f10e48721f70c7e5613b0b0244e064df",
      "stability": "stable_5m",
      "step": "top_salience_project"
    },
    {
      "byte_end": 36,
      "byte_start": 29,
      "content_hash": "3037f94da9d48d4abbbaa27bb97374852648877ee36e8ca7b4b2bcfe7a9c40f7",
      "stability": "volatile",
      "step": "recent_user_signal"
    }
  ]
}
