crates/cairn-core/tests/snapshots/assemble_hot_snapshots__assemble_hot_data_canonical_json_handoff.snap
---
source: crates/cairn-core/tests/assemble_hot_snapshots.rs
expression: "snapshot_for_recipe(\"handoff\")"
---
{
  "bytes": 40,
  "prefix": "purpose body\nindex body\nplaybook\nsignal\n",
  "recipe": "handoff",
  "segments": [
    {
      "byte_end": 13,
      "byte_start": 0,
      "content_hash": "0d7892bed0cb4198183b7726c2392e5df0b11443c80c3adeb13ef66cb840f714",
      "stability": "stable_1h",
      "step": "purpose"
    },
    {
      "byte_end": 24,
      "byte_start": 13,
      "content_hash": "9246b29fd2a6a5d1d8ec676857179ffc4b2c14a3bd0d885a1cb74c110b0ab183",
      "stability": "stable_1h",
      "step": "index"
    },
    {
      "byte_end": 33,
      "byte_start": 24,
      "content_hash": "bed3054354c5074a5d26ff8b56179f0c45bd23e14a3876fb022160c57e71150a",
      "stability": "stable_5m",
      "step": "active_playbook"
    },
    {
      "byte_end": 40,
      "byte_start": 33,
      "content_hash": "3037f94da9d48d4abbbaa27bb97374852648877ee36e8ca7b4b2bcfe7a9c40f7",
      "stability": "volatile",
      "step": "recent_user_signal"
    }
  ]
}
