crates/cairn-core/tests/snapshots/assemble_hot_snapshots__assemble_hot_data_canonical_json_wake_up.snap
---
source: crates/cairn-core/tests/assemble_hot_snapshots.rs
assertion_line: 58
expression: "snapshot_for_recipe(\"wake-up\")"
---
{
  "bytes": 20,
  "prefix": "purpose body\nsignal\n",
  "recipe": "wake-up",
  "segments": [
    {
      "byte_end": 13,
      "byte_start": 0,
      "content_hash": "0d7892bed0cb4198183b7726c2392e5df0b11443c80c3adeb13ef66cb840f714",
      "stability": "stable_1h",
      "step": "purpose"
    },
    {
      "byte_end": 20,
      "byte_start": 13,
      "content_hash": "3037f94da9d48d4abbbaa27bb97374852648877ee36e8ca7b4b2bcfe7a9c40f7",
      "stability": "volatile",
      "step": "recent_user_signal"
    }
  ]
}
